Add instituto page structure and styles

--- a/instituto-marista.html
+++ b/instituto-marista.html
@@ -447,24 +447,27 @@
       </div>
     </section> <!-- end -->
 
+    <section class="mc-institute mc-institute--sidenav">
+      <div class="col-md-2 p-x-0 p-y-3 mc-sidenav--wrapper">
+        <ul class="sidenav mc-sidenav list-unstyled">
+          <li><a href="#sec1">HISTÓRIA</a></li>
+          <li><a href="#sec2">FUNDADOR</a></li>
+          <li><a href="#sec3">NOSSA PRESENÇA</a></li>
+          <li><a href="#sec4">GOVERNO GERAL</a></li>
+          <li><a href="#sec5">ADMINISTRAÇÃO GERAL</a></li>
+          <li><a href="#sec6">CASA GERAL</a></li>
+          <li><a href="#sec7">CASA DE MANZIANA</a></li>
+          <li><a href="#sec8">CAPÍTULOS GERAIS</a></li>
+          <li><a href="#sec9">CONFERÊNCIAS GERAIS</a></li>
+          <li><a href="#sec10">ASSEMBLEIAS DA MISSÃO</a></li>
+        </ul>
+      </div>
+    </section> <!-- end -->
+
     <section class="mc-institute">
       <div class="container">
         <div class="row">
-          <div class="col-md-2 p-x-0 p-y-3 mc-sidenav--wrapper">
-            <ul class="sidenav mc-sidenav list-unstyled">
-              <li><a href="#sec1">HISTÓRIA</a></li>
-              <li><a href="#sec2">FUNDADOR</a></li>
-              <li><a href="#sec3">NOSSA PRESENÇA</a></li>
-              <li><a href="#sec4">GOVERNO GERAL</a></li>
-              <li><a href="#sec5">ADMINISTRAÇÃO GERAL</a></li>
-              <li><a href="#sec6">CASA GERAL</a></li>
-              <li><a href="#sec7">CASA DE MANZIANA</a></li>
-              <li><a href="#sec8">CAPÍTULOS GERAIS</a></li>
-              <li><a href="#sec9">CONFERÊNCIAS GERAIS</a></li>
-              <li><a href="#sec10">ASSEMBLEIAS DA MISSÃO</a></li>
-            </ul>
-          </div> <!-- /#admin-sidebar -->
-          <div id="admin-main-control" class="col-md-10 p-x-3 p-y-1">
+          <div class="col-12 p-x-3 p-y-1">
             <div id="sec1" class="mc-institute__section">
               <div class="row">
                 <div class="col-12 col-md-7">
@@ -751,31 +754,160 @@
                 </div>
               </div> <!-- end -->
             </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
 
+    <section class="mc-institute mc-institute--blue">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
             <div id="sec4" class="mc-institute__section">
-              <h2 class="main-title">GOVERNO GERAL</h2>
-
+              <div class="mc-institute__government">
+                <h2 class="main-title main-title--space30 main-title--white">GOVERNO GERAL</h2>
+                <p>Sucessor do Fundador, o Irmão Superior Geral reúne todos os Irmãos do Instituto em torno de Cristo. Guia-os e
+                acompanha-os na fidelidade a seus compromissos. Com eles discerne o que favorece a adaptação de seu apostolado às
+                necessidades dos tempos, conforme o carisma do Instituto.</p>
+                <p>O Irmão Vigário Geral é o mais próximo colaborador do Irmão Superior Geral. Substitui-o em sua ausência e quando,
+                total ou parcialmente, estiver impedido de exercer seu encargo.</p>
+                <p>O Conselho Geral é formado pelo Irmão Vigário Geral e pelos Irmãos chamados Conselheiros Gerais, que fazem comunidade com
+                o Irmão Superior Geral. O mandato do Governo Geral é de 8 anos.</p>
+                <div class="row mc-institute__government-staff">
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="mc-institute__government-card">
+                      <div class="mc-institute__government-image">
+                        <img src="https://via.placeholder.com/270x270" alt="">
+                        <div class="mc-institute__government-name">
+                          <p>ERNESTO SÁNCHEZ</p>
+                          <small>SUPERIOR GERAL</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="mc-institute__government-card">
+                      <div class="mc-institute__government-image">
+                        <img src="https://via.placeholder.com/270x270" alt="">
+                        <div class="mc-institute__government-name">
+                          <p>ERNESTO SÁNCHEZ</p>
+                          <small>SUPERIOR GERAL</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="mc-institute__government-card">
+                      <div class="mc-institute__government-image">
+                        <img src="https://via.placeholder.com/270x270" alt="">
+                        <div class="mc-institute__government-name">
+                          <p>ERNESTO SÁNCHEZ</p>
+                          <small>SUPERIOR GERAL</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="mc-institute__government-card">
+                      <div class="mc-institute__government-image">
+                        <img src="https://via.placeholder.com/270x270" alt="">
+                        <div class="mc-institute__government-name">
+                          <p>ERNESTO SÁNCHEZ</p>
+                          <small>SUPERIOR GERAL</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="mc-institute__government-card">
+                      <div class="mc-institute__government-image">
+                        <img src="https://via.placeholder.com/270x270" alt="">
+                        <div class="mc-institute__government-name">
+                          <p>ERNESTO SÁNCHEZ</p>
+                          <small>SUPERIOR GERAL</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="mc-institute__government-card">
+                      <div class="mc-institute__government-image">
+                        <img src="https://via.placeholder.com/270x270" alt="">
+                        <div class="mc-institute__government-name">
+                          <p>ERNESTO SÁNCHEZ</p>
+                          <small>SUPERIOR GERAL</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="mc-institute__government-card">
+                      <div class="mc-institute__government-image">
+                        <img src="https://via.placeholder.com/270x270" alt="">
+                        <div class="mc-institute__government-name">
+                          <p>ERNESTO SÁNCHEZ</p>
+                          <small>SUPERIOR GERAL</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="mc-institute__government-card">
+                      <div class="mc-institute__government-image">
+                        <img src="https://via.placeholder.com/270x270" alt="">
+                        <div class="mc-institute__government-name">
+                          <p>ERNESTO SÁNCHEZ</p>
+                          <small>SUPERIOR GERAL</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
 
+    <section class="mc-institute">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
             <div id="sec5" class="mc-institute__section">
-              <h2 class="main-title">ADMINISTRAÇÃO GERAL</h2>
+              <div class="mc-institute__adm">
+                <h2 class="main-title">ADMINISTRAÇÃO GERAL</h2>
 
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
 
+    <section class="mc-institute mc-institute--blue">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
             <div id="sec6" class="mc-institute__section">
               <h2 class="main-title">CASA GERAL</h2>
 
             </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
 
+    <section class="mc-institute">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
             <div id="sec7" class="mc-institute__section">
               <h2 class="main-title">CASA DE MANZIANA</h2>
 
             </div>
 
-            <div id="sec8" class="mc-institute__section">
-              <h2 class="main-title">CAPÍTULOS GERAIS</h2>
 
-            </div>
 
             <div id="sec9" class="mc-institute__section">
               <h2 class="main-title">CONFERÊNCIAS GERAIS</h2>
@@ -786,11 +918,51 @@
               <h2 class="main-title">ASSEMBLEIAS DA MISSÃO</h2>
 
             </div>
-          </div> <!-- /#admin-main-control -->
-        </div> <!-- /.row -->
-      </div>
 
+          </div>
+        </div>
+      </div>
     </section> <!-- end -->
+
+    <section class="mc-institute mc-institute--blue">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div id="sec8" class="mc-institute__section">
+              <h2 class="main-title">CAPÍTULOS GERAIS</h2>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
+
+    <section class="mc-institute">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div id="sec9" class="mc-institute__section">
+              <h2 class="main-title">CONFERÊNCIAS GERAIS</h2>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
+
+    <section class="mc-institute mc-institute--gray">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div id="sec10" class="mc-institute__section">
+              <h2 class="main-title">ASSEMBLEIAS DA MISSÃO</h2>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> <!-- end -->
+
     <section class="mc-highlights-tabs">
       <div class="container">
         <div class="row">
