Add instituto page structure and styles

--- a/atividades.html
+++ b/atividades.html
@@ -501,7 +501,7 @@
             </a>
           </div>
           <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="eventos.html">VER TODOS OS EVENTOS HISTÓRICOS<i class="fa fa-long-arrow-right"></i></a>
+            <a class="btn btn-square btn-square--leak" href="eventos.html">VER TODOS OS EVENTOS HISTÓRICOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -599,7 +599,7 @@
         </div>
         <div class="row">
           <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="calendario.html">VER TODOS OS EVENTOS<i class="fa fa-long-arrow-right"></i></a>
+            <a class="btn btn-square btn-square--leak" href="calendario.html">VER TODOS OS EVENTOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -639,7 +639,7 @@
         </div>
         <div class="row">
           <div class="col-12 text-center">
-            <a class="btn btn-square btn-square-leak" href="">VER TODOS OS PROJETOS<i class="fa fa-long-arrow-right"></i></a>
+            <a class="btn btn-square btn-square--leak" href="">VER TODOS OS PROJETOS<i class="fa fa-long-arrow-right"></i></a>
           </div>
         </div>
       </div>
