Add ser marista page structure and styles

--- a/ser-marista.html
+++ b/ser-marista.html
@@ -491,27 +491,51 @@
                 <div class="row">
                   <div class="col-12">
                     <h2 class="main-title main-title--space30">IRMÃOS MARISTAS</h2>
-                  </div>
-                  <div class="col-12 col-md-6">
-                    <p>São Marcelino Champagnat, padre marista, fundador do Instituto dos Irmãos Maristas, apaixona-se por
-                      Deus e se entrega
-                      com entusiasmo a favor das crianças e jovens, especialmente mais necessitados. Uma comunidade
-                      internacional de irmãos
-                      continua hoje em dia seu sonho.</p>
-                    <p>Quando vê crianças e jovens sem instrução nem catecismo, exclama: “Necessitamos irmãos”.
-                      E a 2 de janeiro de 1817 inicia com dois jovens o projeto do Instituto dos Irmãozinhos de Maria.</p>
-                    <p>O papa João Paulo IIcanoniza Marcelino no dia 18 de abril de 1999 na praça São Pedro do Vaticano e o
-                      reconhece como santo da Igreja
-                      universal.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard
+                    dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <h3 class="main-subtitle main-subtitle--blue-dark">NOSSA IDENTIDADE COMO IRMÃOS HOJE</h3>
+                    <p>Na festa da Apresentação de Maria de 2014, <strong>o Papa Francisco apresentou os três objetivos primários1do Ano da Vida
+                    Consagrada como:</strong></p>
+                    <p>Nosso Secretariado assume esses objetivos e agradece o crescimento fraterno vivido durante os 198 anos de existência do
+                    Instituto.</p>
+                    <p>O XXI Capítulo Geral, realizado em 2009, nos convocou “para, com Maria, ir depressa para novas terras…”
+                    vivendo “uma nova vida consagrada”, e promovendo “… um novo modo de ser irmão” e “… com uma presença significativa entre
+                    as crianças e jovens pobres. ” É nesse contexto que surge o <strong>Secretariado Irmãos Hoje</strong>, integrando ao mesmo tempo as áreas
+                    que nos últimos anos foram atendidas pela <strong>Comissão da vida religiosa</strong> e pelo <strong>Secretariado das Vocações</strong>.</p>
+                    <ul>
+                      <li>
+                        <p>Vivemos o tempo presente com paixão, o que nos leva aser conscientes da importância de cuidar de nossa vocação marista mediante a
+                        formação permanente ao longo de toda a nossa vida de consagrados.</p>
+                      </li>
+                      <li>
+                        <p>Investimos nosso espírito e energia na aprendizagem de novas maneiras de ser maristas, como irmãos e como leigos. Assim
+                        nascem nossas iniciativas e propostas, como o Colóquio
+                        Internacional sobre Formação Inicial, e os diversos Programas oferecidos: “Amanhecer” - Terceira Idade, “Gier” –
+                        Pós-perpétuos, “Caminhos” - Meia idade, etc.</p>
+                      </li>
+                      <li>
+                        <p>Estamos atentos e damos apoio ao nosso Patrimônio Espiritual Marista.</p>
+                      </li>
+                    </ul>
+                    <p>Como Irmãos Hoje:</p>
+                    <p>Atendemos ao apelo do XXI Capítulo Geral para uma nova comunhão com os leigos e a formação de comunidades
+                    internacionais em novas terras.
+                    <p>Abraçamos o futuro com esperança e nos atrevemos a sonhar, junto com os outros
+                    Secretariados da Missão, dos Leigos, da CMI e a FMSI, com um novo começo para a vida e missão do Instituto Marista, na
+                    celebração do Bicentenário que já se aproxima.</p>
+                    <blockquote>“Eis que faço novas todas as coisas! ” (Ap 21:5)</blockquote>
+                    <img src="https://via.placeholder.com/1170x515" alt="">
+                    <div class="caption">
+                      Irmãos formadores para um mundo novo - curso de formação 2014 El Escorial & Manziana
+                    </div>
                     <a class="btn btn-square" href="">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
-                  </div>
-                  <div class="col-12 col-md-6">
-                    <img src="https://via.placeholder.com/555x370" alt="">
                   </div>
                 </div>
               </div>
             </div> <!-- end -->
-
           </div>
         </div>
       </div>
@@ -560,11 +584,11 @@
                             documento “Em torno da mesma mesa - A vocação dos leigos maristas de Champagnat”. Há uma ficha de trabalho, um power-
                             point motivador e outros materiais complementares para cada sessão. Este subsídio foi elaborado pela Província Ibérica e
                             gentilmente colocado à disposição do mundo marista. Está traduzido nas quatro línguas e a diagramação nova foi realizada
-                            por Ángel García, de Porto Rico, o mesmo que compôs a outra coleção de fichas do Secretariado. Resulta um valioso
-                            subsídio de formação para os que desejam discernir e crescer em sua vocação marista. Esse caminho pode ser partilhado
+                            por Ángel García, de Porto Rico, o mesmo que compôs a outra coleção de fichas do Secretariado.</p>
+                            <p>Resulta um valioso subsídio de formação para os que desejam discernir e crescer em sua vocação marista. Esse caminho pode ser partilhado
                             pelos Irmãos e leigos. Precisamente, neste tempo novo em que não temos rotas traçadas e conhecidas, precisamos dos
-                            encontros para formar-nos, para amadurecer em nossas opções e realizar, juntos, um caminho de futuro. O percurso pode
-                            ser feito pessoalmente; as fichas convidam a caminhar com outros. A Província Ibérica motivou a criação de 28 grupos
+                            encontros para formar-nos, para amadurecer em nossas opções e realizar, juntos, um caminho de futuro.</p>
+                            <p>O percurso pode ser feito pessoalmente; as fichas convidam a caminhar com outros. A Província Ibérica motivou a criação de 28 grupos
                             para realizar esse itinerário num ano, terminando ainda com um Fórum provincial sobre a identidade e a vocação do leigo
                             marista. Agradecimento sincero à Província por essa contribuição para o processo da nova relação Irmãos-Leigos.</p>
                             <p>
@@ -604,6 +628,11 @@
                           fugit, atque perspiciatis?</p>
                       </div>
                     </div>
+                  </div>
+
+                  <div class="col-12">
+                    <h2 class="main-title main-title--space30">BAIXAR ARQUIVOS</h2>
+                    lista arquivos
                   </div>
                 </div>
               </div> <!-- end -->
@@ -1073,119 +1102,6 @@
                   </div>
                   <div class="col-12 col-md-5">
                     <img src="https://via.placeholder.com/505x475" alt="">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> <!-- end -->
-
-    <section class="mc-institute">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div id="sec9" class="mc-institute__section">
-              <div class="mc-institute__conference">
-                <h2 class="main-title main-title--space30">CONFERÊNCIAS GERAIS</h2>
-
-                <ul class="nav nav-tabs" id="conferenceTab" role="tablist">
-                  <li class="nav-item">
-                    <a class="nav-link active" id="oque-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
-                      aria-selected="true">O que é?</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" id="resume-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
-                      aria-selected="false">Resumo Histórico</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" id="conference-tab" data-toggle="tab" href="#tab3" role="tab" aria-controls="tab3"
-                      aria-selected="false">Conferências</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" id="album-tab" data-toggle="tab" href="#tab4" role="tab" aria-controls="tab4"
-                      aria-selected="false">Album de Fotos</a>
-                  </li>
-                </ul>
-
-                <div class="tab-content">
-                  <div class="tab-pane active" id="tab1" role="tabpanel" aria-labelledby="oque-tab">
-                    <div class="row">
-                      <div class="col-12 col-md-7">
-                        <p>As Constituições maristas descrevem a Conferência geral como uma assembléia consultiva que tem um duplo objetivo:
-                        consolidar a unidade dentro do Instituto e estudar os assuntos de interesse geral e propor-lhes solução.
-
-                        <p>O costume de reunir um grupo significativo de irmãos para tratar dos assuntos importantes do Instituto já era uma prática de
-                        Marcelino, que via nessa reunião uma ocasião para fomentar a união dos irmãos. A origem desta estrutura ao serviço do
-                        governo geral, tal como a conhecemos agora, começou a tomar forma e ter sua funcionalidade definida a partir dos ares de
-                        renovação do novo estilo de governo das instituições religiosas suscitado pelo Concílio Vaticano II.</p>
-
-                        <p>O irmão Charles Rafael iniciou esta prática em 1961 e voltou a repeti-la em 1965. Destas experiências iniciais, a iniciativa passou a se
-                        consolidar como uma reunião convocatória entre Capítulos gerais. uma vez transcorrida a primeira parte do período do
-                        mandato do irmão Superior geral, como um meio para fazer uma avaliação das decisões capitulares. Depois, passaram a
-                        fazer parte do Capítulo do Governo geral e incluídas nas novas Constituições.</p>
-
-                        <p>A Conferência geral, sendo uma assembléia consultiva, tem uma dinâmica e um funcionamento diferente de um Capítulo geral. Este tem plena autonomia em relação ao
-                        Conselho geral e é autoridade suprema extraordinária do Instituto. Por outro lado, a organização, a temática, as
-                        atividades e a duração da Conferência geral são competência do Superior geral e do seu Conselho em diálogo com os
-                        Provinciais. Durante os Capítulos as decisões são votadas e expressas em forma de documentos para o Instituto. Nas
-                        Conferências, as decisões não são votadas, porém busca-se um consenso sobre os aspectos que serão impulsionados nas
-                        Províncias ou no Instituto, mesmo que não sejam escritos em forma de documentos e declarações oficiais. Estas diferenças
-                        se traduzem na forma de trabalhar e, certamente, nos objetivos que se perseguem e nos meios para alcança-los.</p>
-                      </div>
-                      <div class="col-12 col-md-5">
-                        <img src="https://via.placeholder.com/505x695" alt="">
-                      </div>
-
-                      <div class="col-12">
-                        <a class="btn btn-square" href="">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="tab-pane" id="tab2" role="tabpanel" aria-labelledby="resume-tab">...2</div>
-                  <div class="tab-pane" id="tab3" role="tabpanel" aria-labelledby="conference-tab">...3</div>
-                  <div class="tab-pane" id="tab4" role="tabpanel" aria-labelledby="album-tab">...4</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> <!-- end -->
-
-    <section class="mc-institute mc-institute--gray">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div id="sec10" class="mc-institute__section">
-              <div class="mc-institute__mission">
-                <h2 class="main-title main-title--space30">ASSEMBLEIAS DA MISSÃO</h2>
-                <p>Uma assembleia internacional representa um momento privilegiado na vida do Instituto, que oferece aos Irmãos e aos
-                Leigos a oportunidade de partilhar, celebrar, refletir e construir juntos, em igualdade de condições, a vida e a missão
-                Maristas no presente e para o futuro, fiéis ao carisma. Apresenta-se como oportunidade para fortalecer a dimensão
-                internacional e intercultural a serviço da infância e da juventude.</p>
-                <p>A primeira assembleia realizou-se em Mendes, Brasil.
-                em 2007, e teve como lema “Um coração, uma missão”. A segunda assembleia aconteceu em Nairóbi, Quênia, em 2014, com o
-                lema “Maristas novos em missão”</p>
-                <div class="row">
-                  <div class="col-12 col-md-6">
-                    <a href="" class="mc-institute__mission-button">
-                      <div>
-                        NAIROBI, Quênia 2014
-                        <span>Maristas novos em missão</span>
-                      </div>
-                      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    </a>
-                  </div>
-                  <div class="col-12 col-md-6">
-                    <a href="" class="mc-institute__mission-button">
-                      <div>
-                        MENDES, Brasil 2007
-                        <span>Um coração, uma missão</span>
-                      </div>
-                      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    </a>
                   </div>
                 </div>
               </div>
