--- a/main.html
+++ b/main.html
@@ -889,24 +889,24 @@
           <div class="col-12">
             <ul class="nav nav-tabs" id="ourPresenceTabs" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" id="tab_one" data-toggle="tab" href="#tab_one" role="tab" aria-controls="tab_one"
+                <a class="nav-link active" id="where-tab" data-toggle="tab" href="#tab_one" role="tab" aria-controls="tab_one"
                   aria-selected="true">Onde estamos <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="tab_two" data-toggle="tab" href="#tab_two" role="tab" aria-controls="tab_two"
+                <a class="nav-link" id="statistic-tab" data-toggle="tab" href="#tab_two" role="tab" aria-controls="tab_two"
                   aria-selected="false">Estatísticas <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="tab_three" data-toggle="tab" href="#tab_three" role="tab" aria-controls="tab_three"
+                <a class="nav-link" id="unity-tab" data-toggle="tab" href="#tab_three" role="tab" aria-controls="tab_three"
                   aria-selected="false">Unidades Administrativas <i class="fa fa-long-arrow-right"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="tab_four" data-toggle="tab" href="#tab_four" role="tab" aria-controls="tab_four"
+                <a class="nav-link" id="mission-tab" data-toggle="tab" href="#tab_four" role="tab" aria-controls="tab_four"
                   aria-selected="false">A Missão Marista em números <i class="fa fa-long-arrow-right"></i></a>
               </li>
             </ul>
             <div class="tab-content">
-              <div class="tab-pane active" id="tab_one" role="tabpanel" aria-labelledby="tab_one">
+              <div class="tab-pane active" id="tab_one" role="tabpanel" aria-labelledby="where-tab">
                 <div class="row">
                   <div class="col-12">
                     <p class="mc-ourpresence__text">Os Irmãos Maristas se encontram em 81 países dos cinco continentes. Aqui te mostramos nossa organização e te convidamos
@@ -917,21 +917,21 @@
                       <img src="src/images/map-home.svg" alt="mapa">
                     </div>
                   </div>
+                  <div class="col-12">
+                    <ul class="list-inline mc-ourpresence__continent">
+                      <li class="list-inline-item"><a href="">ÁFRICA</a></li>
+                      <li class="list-inline-item"><a href="">AMÉRICA</a></li>
+                      <li class="list-inline-item"><a href="">ÁSIA</a></li>
+                      <li class="list-inline-item"><a href="">EUROPA</a></li>
+                      <li class="list-inline-item"><a href="">OCEANIA</a></li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-              <div class="tab-pane" id="tab_two" role="tabpanel" aria-labelledby="tab_two">...2</div>
-              <div class="tab-pane" id="tab_three" role="tabpanel" aria-labelledby="tab_three">...3</div>
-              <div class="tab-pane" id="tab_four" role="tabpanel" aria-labelledby="tab_four">...4</div>
+              <div class="tab-pane" id="tab_two" role="tabpanel" aria-labelledby="statistic-tab">...2</div>
+              <div class="tab-pane" id="tab_three" role="tabpanel" aria-labelledby="unity-tab">...3</div>
+              <div class="tab-pane" id="tab_four" role="tabpanel" aria-labelledby="mission-tab">...4</div>
             </div>
-          </div>
-          <div class="col-12">
-            <ul class="list-inline mc-ourpresence__continent">
-              <li class="list-inline-item"><a href="">ÁFRICA</a></li>
-              <li class="list-inline-item"><a href="">AMÉRICA</a></li>
-              <li class="list-inline-item"><a href="">ÁSIA</a></li>
-              <li class="list-inline-item"><a href="">EUROPA</a></li>
-              <li class="list-inline-item"><a href="">OCEANIA</a></li>
-            </ul>
           </div>
         </div>
       </div>
