--- a/missao-marista.html
+++ b/missao-marista.html
@@ -923,6 +923,21 @@
                 ornare massa eu massa faucibus, ut tempus urna tincidunt. Sed ut odio est. Donec porta venenatis accumsan. Nullam ut dui
                 nec mi finibus mollis eu a orci. Nulla fermentum orci at urna hendrerit, sit amet volutpat ligula pellentesque.</p>
 
+                <div class="mc-mission__children-search">
+                  <div class="row align-items-center">
+                    <div class="col-12 col-sm-6">
+                      <h3 class="main-subtitle main-subtitle--blue-dark">DIREITO DAS CRIANÇAS</h3>
+                    </div>
+                    <div class="col-12 col-sm-6">
+                      <div class="form-group mc-activities__select">
+                        <label for="">PROVÍNCIA</label>
+                        <select name="" id="">
+                          <option value="">Ir. Basílio Rueda</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                </div>
 
               </div>
             </div>
@@ -983,8 +998,32 @@
                 <h2 class="main-title main-title--space30">COMUNIDADES INTERNACIONAIS</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-
+                <div class="row">
+                  <div class="col-12 col-md-6">
+                    <a href="" class="mc-institute__mission-button">
+                      <div>PROJETO FRATELLI</div>
+                      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    </a>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <a href="" class="mc-institute__mission-button">
+                      <div>MDA</div>
+                      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    </a>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <a href="" class="mc-institute__mission-button">
+                      <div>SUDÃO DO SUL</div>
+                      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    </a>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <a href="" class="mc-institute__mission-button">
+                      <div>LAVALLA>200</div>
+                      <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
