--- a/missao-marista.html
+++ b/missao-marista.html
@@ -938,7 +938,52 @@
                     </div>
                   </div>
                 </div>
-
+                <div class="mc-mission__children-cards">
+                  <div class="row">
+                    <div class="col-12 col-md-6">
+                      <div class="mc-default__card mc-default__card--v2">
+                        <div class="mc-default__image"><img src="https://via.placeholder.com/195x180" alt=""></div>
+                        <div class="mc-default__wrapper">
+                          <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">PROVÍNCIA AMÉRICA CENTRAL</span></div>
+                          <div class="mc-default__body">
+                            <a href="">
+                              <p>Lorem Ipsum is simply dummy text</p>
+                              <i class="fa fa-long-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                      <div class="mc-default__card mc-default__card--v2">
+                        <div class="mc-default__image"><img src="https://via.placeholder.com/195x180" alt=""></div>
+                        <div class="mc-default__wrapper">
+                          <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">PROVÍNCIA AMÉRICA CENTRAL</span></div>
+                          <div class="mc-default__body">
+                            <a href="">
+                              <p>Lorem Ipsum is simply dummy text</p>
+                              <i class="fa fa-long-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                      <div class="mc-default__card mc-default__card--v2">
+                        <div class="mc-default__image"><img src="https://via.placeholder.com/195x180" alt=""></div>
+                        <div class="mc-default__wrapper">
+                          <div class="mc-default__header"><span class="date">27/11/2018</span> <span class="label">PROVÍNCIA AMÉRICA CENTRAL</span></div>
+                          <div class="mc-default__body">
+                            <a href="">
+                              <p>Lorem Ipsum is simply dummy text</p>
+                              <i class="fa fa-long-arrow-right"></i>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
