--- a/noticias.html
+++ b/noticias.html
@@ -111,9 +111,10 @@
               ENG
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownLang">
-              <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
-              <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
-              <a class="dropdown-item" href="#">PORTUGUÊS (BR)</a>
+              <a class="dropdown-item" href="#">Português (PTR)</a>
+              <a class="dropdown-item" href="#">France (FRA))</a>
+              <a class="dropdown-item" href="#">Spanish (SPA)</a>
+              <a class="dropdown-item" href="#">English (ENG)</a>
             </div>
           </div>
         </div>
