Add content and styles of instituto historia

--- a/instituto-marista.html
+++ b/instituto-marista.html
@@ -494,7 +494,7 @@
                     formação, viver um tempo de noviciado que conclui com a profissão dos votos ou compromissos, prossegue um tempo de
                     formação acadêmica para as tarefas que desempenharão nos anos sucessivos e iniciar de maneira direta sua dedicação às
                     crianças e jovens nas diversas situações, consciente de que seu serviço constitui um valor inestimável.</p>
-                    <a class="btn btn-square" href="">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
+                    <a class="btn btn-square" href="instituto-historia.html">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
