Add content and styles of instituto historia

--- a/instituto-historia.html
+++ b/instituto-historia.html
@@ -436,8 +436,8 @@
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
-                <!-- <li class="breadcrumb-item"><a href="atividades.html">ATIVIDADES</a></li> -->
-                <li class="breadcrumb-item active" aria-current="page">INSTITUTO MARISTA</li>
+                <li class="breadcrumb-item"><a href="instituto-marista.html">INSTITUTO MARISTA</a></li>
+                <li class="breadcrumb-item active" aria-current="page">HISTÓRIA</li>
               </ol>
             </nav>
           </div>
