Add content and styles of instituto fundador

--- a/instituto-fundador.html
+++ b/instituto-fundador.html
@@ -437,7 +437,7 @@
               <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
                 <li class="breadcrumb-item"><a href="instituto-historia.html">INSTITUTO MARISTA</a></li>
-                <li class="breadcrumb-item active" aria-current="page">HISTÓRIA</li>
+                <li class="breadcrumb-item active" aria-current="page">FUNDADOR</li>
               </ol>
             </nav>
           </div>
@@ -470,13 +470,13 @@
               <div class="mc-institute__history">
                 <div class="row">
                   <div class="col-12 col-md-7">
-                    <h2 class="main-title main-title--space30">HISTÓRIA</h2>
-                    <p class="mc-institute__history-title">Irmãos Maristas das Escolas (F.M.S. - Fratres Maristæ a Scholis)</p>
-                    <p>Marcelino Champagnat fundava, em 2 de janeiro de 1817, em La Valla, na França, o Instituto religioso laical, ou
-                    Instituto religioso de Irmãos, sob o nome de Pequenos Irmãos de Maria.</p>
-                    <p>Considerava-o como um ramo da Sociedade de Maria.
-                    A Santa Sé aprovava-nos em 1863 como Instituto autônomo e de direito pontifício. Ao mesmo tempo em que respeitava nosso
-                    nome de origem, dava-nos o de Irmãos Maristas das Escolas (F.M.S. - Fratres Maristæ a Scholis).</p>
+                    <h2 class="main-title main-title--space30">MARCELINO CHAMPAGNAT</h2>
+                    <p>São Marcelino Champagnat, padre marista, fundador do Instituto dos Irmãos Maristas, apaixona-se por Deus e se entrega
+                    com entusiasmo a favor das crianças e jovens, especialmente mais necessitados. Uma comunidade internacional de irmãos
+                    continua hoje em dia seu sonho. Quando vê crianças e jovens sem instrução nem catecismo, exclama: “Necessitamos irmãos”.
+                    E a 2 de janeiro de 1817 inicia com dois jovens o projeto do Instituto dos Irmãozinhos de Maria. O papa João Paulo II
+                    canoniza Marcelino no dia 18 de abril de 1999 na praça São Pedro do Vaticano e o reconhece como santo da Igreja
+                    universal.</p>
                   </div>
                   <div class="col-12 col-md-5">
                     <img src="https://via.placeholder.com/470x370" alt="">
