--- a/instituto-marista.html
+++ b/instituto-marista.html
@@ -566,7 +566,7 @@
                     <p>O papa João Paulo IIcanoniza Marcelino no dia 18 de abril de 1999 na praça São Pedro do Vaticano e o
                       reconhece como santo da Igreja
                       universal.</p>
-                    <a class="btn btn-square" href="">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
+                    <a class="btn btn-square" href="instituto-fundador.html">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
                   </div>
                   <div class="col-12 col-md-6">
                     <img src="https://via.placeholder.com/555x370" alt="">
